# omnistore

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
omnistore/: store.py
omnistore/objstore/: __init__.py  aliyun_oss.py  constant.py  minio.py  objstore.py  objstore_factory.py  s3.py
tests/integration_tests/objstore/: test_aliyun_oss.py  test_minio.py  test_s3.py
