[tool.poetry]
name = "omnistore"
version = "0.0.1"
description = "An unified python client to communicate with various kinds of object-store providers."
authors = ["InftyAI Community"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
