[tool.poetry]
name = "omnistore"
version = "0.0.3"
description = "An unified python client to communicate with various kinds of object-store providers."
authors = ["InftyAI Community"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oss2 = "^2.18.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
